--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "handlebars": "^4.7.7",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.15.0"
   }
