--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Sessions21/Ring-Builder_Project-2#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
