--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Sessions21/Ring-Builder_Project-2#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
